; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_drv2665.c_drv2665_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_drv2665.c_drv2665_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.drv2665_data = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@DRV2665_CTRL_2 = common dso_local global i32 0, align 4
@DRV2665_STANDBY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Failed to enter standby mode: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_dev*)* @drv2665_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drv2665_close(%struct.input_dev* %0) #0 {
  %2 = alloca %struct.input_dev*, align 8
  %3 = alloca %struct.drv2665_data*, align 8
  %4 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %2, align 8
  %5 = load %struct.input_dev*, %struct.input_dev** %2, align 8
  %6 = call %struct.drv2665_data* @input_get_drvdata(%struct.input_dev* %5)
  store %struct.drv2665_data* %6, %struct.drv2665_data** %3, align 8
  %7 = load %struct.drv2665_data*, %struct.drv2665_data** %3, align 8
  %8 = getelementptr inbounds %struct.drv2665_data, %struct.drv2665_data* %7, i32 0, i32 2
  %9 = call i32 @cancel_work_sync(i32* %8)
  %10 = load %struct.drv2665_data*, %struct.drv2665_data** %3, align 8
  %11 = getelementptr inbounds %struct.drv2665_data, %struct.drv2665_data* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @DRV2665_CTRL_2, align 4
  %14 = load i32, i32* @DRV2665_STANDBY, align 4
  %15 = load i32, i32* @DRV2665_STANDBY, align 4
  %16 = call i32 @regmap_update_bits(i32 %12, i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %1
  %20 = load %struct.drv2665_data*, %struct.drv2665_data** %3, align 8
  %21 = getelementptr inbounds %struct.drv2665_data, %struct.drv2665_data* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @dev_err(i32* %23, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %24)
  br label %26

26:                                               ; preds = %19, %1
  ret void
}

declare dso_local %struct.drv2665_data* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @cancel_work_sync(i32*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
